# OCVWarp

./: .gitattributes  .travis.yml  CMakeLists.txt  CMakeListsWin.txt  CMakeListsWin32.txt  LICENSE  OCVWarp.cpp  OCVWarp.vcxproj  OCVWarpNorth.cpp  OCVWarpNorth.vcxproj  OCVWarpWin32.vcxproj  OpenCV.props  OpenCVWin10.props  OpenCVWin32.props  README.md  appveyor.yml  appveyorWin32.yml  appveyormingw.yml  appveyorsetdir.bat  changelog.md  debugdump4.txt  getfourcc.cpp  x64Win10.vcxproj
.github/workflows/: cmake-nix.yml  cmake-ocv4.5plus.yml  msbuild.yml  msbuildwithopencv4.5.3.yml  osx-build.yml
appdir/: OCVWarp.desktop  getfourcc.desktop
octave/: checkgrid.m  equidist.m  equidist2fish.m  fish2equidist.m  orthographicp.m  readme.md  testfulldometowarp.m  testpaulrot.m  testpaultr.m  testpaultrmod.m  testwolfrot.m  testwolftr.m
